Antlr-generated/translator/CobolGrammarParser.java
// $ANTLR 3.5.2 C:\\Users\\works\\workspace\\Cobol2Java--Version 6.0\\src\\translator\\CobolGrammar.g 2014-07-01 15:49:06


	package translator;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.stringtemplate.*;
import org.antlr.stringtemplate.language.*;
import java.util.HashMap;
@SuppressWarnings("all")
public class CobolGrammarParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACCEPT", "ADD", "ADDITION", "AFTER", 
		"ALLEXCEPTHASH", "AND", "ARGUMENTVALUE", "AUTHOR", "BEGIN", "BY", "CALL", 
		"COLON", "COMMA", "COMP3", "COMPUTE", "CONFIGURATION", "DATA", "DECLARE", 
		"DIGITS", "DISPLAY", "DIVISION", "DON", "DOT", "ELSE", "END", "ENDEVALUATE", 
		"ENDEXEC", "ENDIF", "ENDPERFORM", "ENVIRONMENT", "EQUAL", "EVALUATE", 
		"EXEC", "EXIT", "FALSE", "FIGURATIVE", "FILLER", "FORWARDSLASH", "FROM", 
		"FUNCTION", "GREATER", "GREATERTHANEQUAL", "HASH", "HOSTVARIABLES", "HYPHEN", 
		"IDENTIFICATION", "IDENTIFIER", "IF", "INCLUDE", "INITIALIZE", "INSERT", 
		"LESSER", "LESSERTHANEQUAL", "LETTER", "LPAREN", "MOVE", "MULTIPLY", "NINE", 
		"NOT", "NOTEQUAL", "NOTFALSE", "NOTTRUE", "NUMVAL", "OBJECTCOMP", "OR", 
		"PERFORM", "PIC", "PROCEDURE", "PROGRAMID", "QUOTES", "REDEFINES", "RPAREN", 
		"RUN", "S9", "SECTION", "SINGLEQUOTES", "SOURCECOMP", "SPECIALSYMBOL", 
		"SQL", "SQLCA", "STOP", "STRING", "SUB", "TEST", "THEN", "TO", "TRUE", 
		"UNDERSCORE", "UNTIL", "USING", "VALUE", "VARYING", "WHEN", "WHERE", "WITH", 
		"WORKINGSTORAGE", "WS", "X"
	};
	public static final int EOF=-1;
	public static final int ACCEPT=4;
	public static final int ADD=5;
	public static final int ADDITION=6;
	public static final int AFTER=7;
	public static final int ALLEXCEPTHASH=8;
	public static final int AND=9;
	public static final int ARGUMENTVALUE=10;
	public static final int AUTHOR=11;
	public static final int BEGIN=12;
	public static final int BY=13;
	public static final int CALL=14;
	public static final int COLON=15;
	public static final int COMMA=16;
	public static final int COMP3=17;
	public static final int COMPUTE=18;
	public static final int CONFIGURATION=19;
	public static final int DATA=20;
	public static final int DECLARE=21;
	public static final int DIGITS=22;
	public static final int DISPLAY=23;
	public static final int DIVISION=24;
	public static final int DON=25;
	public static final int DOT=26;
	public static final int ELSE=27;
	public static final int END=28;
	public static final int ENDEVALUATE=29;
	public static final int ENDEXEC=30;
	public static final int ENDIF=31;
	public static final int ENDPERFORM=32;
	public static final int ENVIRONMENT=33;
	public static final int EQUAL=34;
	public static final int EVALUATE=35;
	public static final int EXEC=36;
	public static final int EXIT=37;
	public static final int FALSE=38;
	public static final int FIGURATIVE=39;
	public static final int FILLER=40;
	public static final int FORWARDSLASH=41;
	public static final int FROM=42;
	public static final int FUNCTION=43;
	public static final int GREATER=44;
	public static final int GREATERTHANEQUAL=45;
	public static final int HASH=46;
	public static final int HOSTVARIABLES=47;
	public static final int HYPHEN=48;
	public static final int IDENTIFICATION=49;
	public static final int IDENTIFIER=50;
	public static final int IF=51;
	public static final int INCLUDE=52;
	public static final int INITIALIZE=53;
	public static final int INSERT=54;
	public static final int LESSER=55;
	public static final int LESSERTHANEQUAL=56;
	public static final int LETTER=57;
	public static final int LPAREN=58;
	public static final int MOVE=59;
	public static final int MULTIPLY=60;
	public static final int NINE=61;
	public static final int NOT=62;
	public static final int NOTEQUAL=63;
	public static final int NOTFALSE=64;
	public static final int NOTTRUE=65;
	public static final int NUMVAL=66;
	public static final int OBJECTCOMP=67;
	public static final int OR=68;
	public static final int PERFORM=69;
	public static final int PIC=70;
	public static final int PROCEDURE=71;
	public static final int PROGRAMID=72;
	public static final int QUOTES=73;
	public static final int REDEFINES=74;
	public static final int RPAREN=75;
	public static final int RUN=76;
	public static final int S9=77;
	public static final int SECTION=78;
	public static final int SINGLEQUOTES=79;
	public static final int SOURCECOMP=80;
	public static final int SPECIALSYMBOL=81;
	public static final int SQL=82;
	public static final int SQLCA=83;
	public static final int STOP=84;
	public static final int STRING=85;
	public static final int SUB=86;
	public static final int TEST=87;
	public static final int THEN=88;
	public static final int TO=89;
	public static final int TRUE=90;
	public static final int UNDERSCORE=91;
	public static final int UNTIL=92;
	public static final int USING=93;
	public static final int VALUE=94;
	public static final int VARYING=95;
	public static final int WHEN=96;
	public static final int WHERE=97;
	public static final int WITH=98;
	public static final int WORKINGSTORAGE=99;
	public static final int WS=100;
	public static final int X=101;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public CobolGrammarParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public CobolGrammarParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected StringTemplateGroup templateLib =
	  new StringTemplateGroup("CobolGrammarParserTemplates", AngleBracketTemplateLexer.class);

	public void setTemplateLib(StringTemplateGroup templateLib) {
	  this.templateLib = templateLib;
	}
	public StringTemplateGroup getTemplateLib() {
	  return templateLib;
	}
	/** allows convenient multi-value initialization:
	 *  "new STAttrMap().put(...).put(...)"
	 */
	@SuppressWarnings("serial")
	public static class STAttrMap extends HashMap<String, Object> {
		public STAttrMap put(String attrName, Object value) {
			super.put(attrName, value);
			return this;
		}
	}
	@Override public String[] getTokenNames() { return CobolGrammarParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\Users\\works\\workspace\\Cobol2Java--Version 6.0\\src\\translator\\CobolGrammar.g"; }


	public static class code_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "code"
	// C:\\Users\\works\\workspace\\Cobol2Java--Version 6.0\\src\\translator\\CobolGrammar.g:16:1: code : identificationDivision environmentDivision dataDivision procedureDivision -> code(id=$identificationDivision.stenv=$environmentDivision.stdata=$dataDivision.stpro=$procedureDivision.st);
	public final CobolGrammarParser.code_return code() throws RecognitionException {
		CobolGrammarParser.code_return retval = new CobolGrammarParser.code_return();
		retval.start = input.LT(1);

		ParserRuleReturnScope identificationDivision1 =null;
		ParserRuleReturnScope environmentDivision2 =null;
		ParserRuleReturnScope dataDivision3 =null;
		ParserRuleReturnScope procedureDivision4 =null;

		try {
			// C:\\Users\\works\\workspace\\Cobol2Java--Version 6.0\\src\\translator\\CobolGrammar.g:16:5: ( identificationDivision environmentDivision dataDivision procedureDivision -> code(id=$identificationDivision.stenv=$environmentDivision.stdata=$dataDivision.stpro=$procedureDivision.st))
			// C:\\Users\\works\\workspace\\Cobol2Java--Version 6.0\\src\\translator\\CobolGrammar.g:16:8: identificationDivision environmentDivision dataDivision procedureDivision
			{
			pushFollow(FOLLOW_identificationDivision_in_code58);
			identificationDivision1=identificationDivision();
			state._fsp--;
			if (state.failed) return retval;
			pushFollow(FOLLOW_environmentDivision_in_code65);
			environmentDivision2=environmentDivision();
			state._fsp--;
			if (state.failed) return retval;
			pushFollow(FOLLOW_dataDivision_in_code73);
			dataDivision3=dataDivision();
			state._fsp--;
			if (state.failed) return retval;
			pushFollow(FOLLOW_procedureDivision_in_code80);
			procedureDivision4=procedureDivision();
			state._fsp--;
			if (state.failed) return retval;
			// TEMPLATE REWRITE
			if ( state.backtracking==0 ) {
			  // 20:6: -> code(id=$identificationDivision.stenv=$environmentDivision.stdata=$dataDivision.stpro=$procedureDivision.st)
			  {
			  	retval.st = templateLib.getInstanceOf("code",new STAttrMap().put("id", (identificationDivision1!=null?((StringTemplate)identificationDivision1.getTemplate()):null)).put("env", (environmentDivision2!=null?((StringTemplate)environmentDivision2.getTemplate()):null)).put("data", (dataDivision3!=null?((StringTemplate)dataDivision3.getTemplate()):null)).put("pro", (procedureDivision4!=null?((StringTemplate)procedureDivision4.getTemplate()):null)));
			  }


			}

			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "code"


	public static class identificationDivision_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "identificationDivision"
	// C:\\Users\\works\\workspace\\Cobol2Java--Version 6.0\\src\\translator\\CobolGrammar.g:22:1: identificationDivision : IDENTIFICATION DIVISION ( DOT )? PROGRAMID DOT id1= IDENTIFIER ( DOT )? AUTHOR DOT id2= IDENTIFIER ( DOT )? -> idDivision(pid=$id1.textauth=$id2.text);
	public final CobolGrammarParser.identificationDivision_return identificationDivision() throws RecognitionException {
		CobolGrammarParser.identificationDivision_return retval = new CobolGrammarParser.identificationDivision_return();
		retval.start = input.LT(1);

		Token id1=null;
		Token id2=null;

		try {
			// C:\\Users\\works\\workspace\\Cobol2Java--Version 6.0\\src\\translator\\CobolGrammar.g:22:24: ( IDENTIFICATION DIVISION ( DOT )? PROGRAMID DOT id1= IDENTIFIER ( DOT )? AUTHOR DOT id2= IDENTIFIER ( DOT )? -> idDivision(pid=$id1.textauth=$id2.text))
			// C:\\Users\\works\\workspace\\Cobol2Java--Version 6.0\\src\\translator\\CobolGrammar.g:22:26: IDENTIFICATION DIVISION ( DOT )? PROGRAMID DOT id1= IDENTIFIER ( DOT )? AUTHOR DOT id2= IDENTIFIER ( DOT )?
			{
			match(input,IDENTIFICATION,FOLLOW_IDENTIFICATION_in_identificationDivision116); if (state.failed) return retval;
			match(input,DIVISION,FOLLOW_DIVISION_in_identificationDivision118); if (state.failed) return retval;
			// C:\\Users\\works\\workspace\\Cobol2Java--Version 6.0\\src\\translator\\CobolGrammar.g:22:50: ( DOT )?
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==DOT) ) {
				alt1=1;
			}
			switch (alt1) {
				case 1 :
					// C:\\Users\\works\\workspace\\Cobol2Java--Version 6.0\\src\\translator\\CobolGrammar.g:22:50: DOT
					{
					match(input,DOT,FOLLOW_DOT_in_identificationDivision120); if (state.failed) return retval;
					}
					break;

			}

			match(input,PROGRAMID,FOLLOW_PROGRAMID_in_identificationDivision131); if (state.failed) return retval;
			match(input,DOT,FOLLOW_DOT_in_identificationDivision133); if (state.failed) return retval;
			id1=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_identificationDivision139); if (state.failed) return retval;
			// C:\\Users\\works\\workspace\\Cobol2Java--Version 6.0\\src\\translator\\CobolGrammar.g:23:39: ( DOT )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==DOT) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// C:\\Users\\works\\workspace\\Cobol2Java--Version 6.0\\src\\translator\\CobolGrammar.g:23:39: DOT
					{
					match(input,DOT,FOLLOW_DOT_in_identificationDivision141); if (state.failed) return retval;
					}
					break;

			}

			match(input,AUTHOR,FOLLOW_AUTHOR_in_identificationDivision151); if (state.failed) return retval;
			match(input,DOT,FOLLOW_DOT_in_identificationDivision153); if (state.failed) return retval;
			id2=(Token)match(input,IDENTIFIER,FOLLOW_IDENTIFIER_in_identificationDivision159); if (state.failed) return retval;
			// C:\\Users\\works\\workspace\\Cobol2Java--Version 6.0\\src\\translator\\CobolGrammar.g:24:36: ( DOT )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==DOT) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// C:\\Users\\works\\workspace\\Cobol2Java--Version 6.0\\src\\translator\\CobolGrammar.g:24:36: DOT
					{
					match(input,DOT,FOLLOW_DOT_in_identificationDivision161); if (state.failed) return retval;
					}
					break;

			}

			// TEMPLATE REWRITE
			if ( state.backtracking==0 ) {
			  // 25:8: -> idDivision(pid=$id1.textauth=$id2.text)
			  {
			  	retval.st = templateLib.getInstanceOf("idDivision",new STAttrMap().put("pid", (id1!=null?id1.getText():null)).put("auth", (id2!=null?id2.getText():null)));
			  }


			}

			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "identificationDivision"


	public static class environmentDivision_return extends ParserRuleReturnScope {
		public StringTemplate st;
		public Object getTemplate() { return st; }
		public String toString() { return st==null?null:st.toString(); }
	};


	// $ANTLR start "environmentDivision"
	// C:\\Users\\works\\workspace\\Cobol2Java--Version 6.0\\src\\translator\\CobolGrammar.g:27:1: environmentDivision : ENVIRONMENT DIVISION ( DOT )? CONFIGURATION SECTION ( DOT )? SOURCECOMP DOT (id1= IDENTIFIER )+ ( DOT )? OBJECTCOMP DOT (id2= IDENTIFIER )+ ( DOT )? -> envDivision(src=srcCompobj=objComp);
	public final CobolGrammarParser.environmentDivision_return environmentDivision() throws RecognitionException {
		CobolGrammarParser.environmentDivision_return retval = new CobolGrammarParser.environmentDivision_return();
		retval.start = input.LT(1);

		Token id1=null;
		Token id2=null;


		      List srcComp = new ArrayList();
		      List objComp = new ArrayList();

		try {
			// C:\\Users\\works\\workspace\\Cobol2Java--Version 6.0\\src\\translator\\CobolGrammar.g:32:3: ( ENVIRONMENT DIVISION ( DOT )? CONFIGURATION SECTION ( DOT )? SOURCECOMP DOT (id1= IDENTIFIER )+ ( DOT )? OBJECTCOMP DOT (id2= IDENTIFIER )+ ( DOT )? -> envDivision(src=srcCompobj=objComp))
			// C:\\Users\\works\\workspace\\Cobol2Java--Version 6.0\\src\\translator\\CobolGrammar.g:32:3: ENVIRONMENT DIVISION ( DOT )? CONFIGURATION SECTION ( DOT )? SOURCECOMP DOT (id1= IDENTIFIER )+ ( DOT )? OBJECTCOMP DOT (id2= IDENTIFIER )+ ( DOT )?
			{
			match(input,ENVIRONMENT,FOLLOW_ENVIRONMENT_in_environmentDivision197); if (state.failed) return retval;
			match(input,DIVISION,FOLLOW_DIVISION_in_environmentDivision199); if (state.failed) return retval;
			// C:\\Users\\works\\workspace\\Cobol2Java--Version 6.0\\src\\translator\\CobolGrammar.g:32:24: ( DOT )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==DOT) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// C:\\Users\\works\\workspace\\Cobol2Java--Version 6.0\\src\\translator\\CobolGrammar.g:32:24: DOT
					{
					match(input,DOT,FOLLOW_DOT_in_environmentDivision201); if (state.failed) return retval;
					}
					break;

			}
